--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+git (1:1.8.5.2-1.1) unstable; urgency=low
+
+  * /etc/bash_completion.d/git-prompt: check for git-sh-prompt
+    and do not source it if git is removed but not purged (thx
+    Craig Small; closes: #726669).
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Fri, 03 Jan 2014 15:44:36 -0800
+
 git (1:1.8.5.2-1) unstable; urgency=low
 
   * new upstream point release.
