debian/control: Breaks: git-buildpackage (<< 0.6.5)
git v1.8.5-rc0~101^2~3 (status: disable display of '#' comment prefix by
default, 2013-09-06) broke git-buildpackage:

  $ git import-dsc ../dash_0.5.7-3+nmu1.dsc
  gbp:error: Repository has uncommitted changes, commit these first:
  gbp:error: On branch debian-sid
  Your branch is up-to-date with 'debian/debian-sid'.
  nothing to commit, working directory clean

(That's with git-buildpackage 0.5.32.)  git-buildpackage 0.6.5~3 (Be
more robust about git status output changes, 2013-10-16) fixes it.

In backports.debian.org we can set the default of '[status]
displayCommentPrefix' to true instead.

Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ git (1:1.8.5.2-1.1) unstable; urgency=low
   * /etc/bash_completion.d/git-prompt: check for git-sh-prompt
     and do not source it if git is removed but not purged (thx
     Craig Small; closes: #726669).
+  * debian/control: package git Breaks: git-buildpackage versions
+    that rely on output from 'git status' without the --porcelain
+    flag (closes: #734223).
 
  -- Jonathan Nieder <jrnieder@gmail.com>  Fri, 03 Jan 2014 15:44:36 -0800
 
