--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+git (1:1.9~rc1-1) unstable; urgency=low
+
+  * new upstream release candidate.
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Mon, 27 Jan 2014 14:07:56 -0800
+
 git (1:1.9~rc0-1) unstable; urgency=low
 
   * new upstream release candidate.
