--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+git (1:1.9.0~rc3-1) unstable; urgency=low
+
+  * new upstream release candidate.
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Fri, 07 Feb 2014 15:53:52 -0800
+
 git (1:1.9~rc1-1) unstable; urgency=low
 
   * new upstream release candidate.
