debian/git-email: make recommends on IO::Socket::SSL versioned
Version 1.951 (2013-07-03) of libio-socket-ssl-perl introduced the
following change:

 use Net::SSLeay::CTX_set_default_verify_paths to use openssl's builtin
 defaults for CA unless CA path/file was given (or IO::Socket::SSL builtins
 used)

From v1.8.5.5~5^2 (send-email: /etc/ssl/certs/ directory may not be
usable as ca_path, 2014-01-15) on, git relies on that behavior.
Declare the dependency.

Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+git (1:1.9.0-1.1) unstable; urgency=low
+
+  * git-email: Recommends: libio-socket-ssl-perl (>= 1.951) since
+    earlier versions do not use OpenSSL's defaults when ca_path
+    and ca_file are unset.
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Tue, 25 Feb 2014 21:16:56 -0800
+
 git (1:1.9.0-1) unstable; urgency=low
 
   * new upstream release.
